# AgentFlow

./: .gitignore  .ruff.toml  EVALUATION_QUICK_START.md  README.md  diagnose_memory.py  manage.py  pyproject.toml  start_server.sh  test_field_selector.py  test_table_selector.py  verify_batch3.py  verify_routing.py
accounts/: admin.py  api.py  models.py
accounts/controllers/: __init__.py  api_key.py  auth.py  user.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  api_key.py  user_profile.py
accounts/schemas/: __init__.py  api_key.py  user.py
agents/: api.py  apps.py  langgraph_graph.py  langgraph_nodes.py  langgraph_service.py
agents/controllers/: __init__.py  agent.py  execution.py
agents/evaluation/: __init__.py  evaluator.py  judge.py  metrics.py  rubrics.py  rule_based_evaluator.py
agents/langgraph/: __init__.py  graph.py  improved_architecture_example.py  nodes.py  state.py
agents/migrations/: 0001_initial.py
agents/models/: __init__.py  models.py
agents/schemas/: __init__.py  agent.py
agents/services/: __init__.py  agent_service.py  evaluation_integration.py  execution_controller.py  execution_trace.py  executor_base.py  executor_langchain.py  executor_langgraph.py  observation_masking.py  smart_memory.py  tool_retry.py  tools.py
agents/test_datasets/: __init__.py  edge_cases.py  fixtures.py  scenarios.py
common/utils/: __init__.py  cache_utils.py  retry_utils.py
deploy/: docker-compose.yml
deploy/data/: .gitignore
docs/: ARCHITECTURE.md
documents/: admin.py  api.py  apps.py  services.py  tasks.py  views.py
documents/controllers/: __init__.py  document.py
documents/migrations/: 0001_initial.py  0002_document_embedding_model_version_and_more.py  0003_document_original_filename.py  0004_remove_document_original_filename.py  0005_document_task_id.py  0006_add_soft_delete_fields.py  0007_migrate_faiss_to_pgvector.py  pg_fulltext_search.sql
documents/models/: __init__.py  (+1 more)
frontend/: index.html  index_old.html
qa/: admin.py  api.py  services.py
scripts/: EVALUATION_TEST_REPORT.md  analyze_evaluation_deviations.py  evaluate_agent.py  test_evaluation_final_report.py  test_evaluation_improved.py  test_evaluation_manual.py
smartdocs_project/: __init__.py  asgi.py  celery.py  celery_logging.py  settings.py  urls.py  wsgi.py
tests/: cached_docs_validation.py  dataset_integration_test.py  dataset_validation.py  existing_docs_validation.py  large_scale_validation.py  optimized_cache_test.py  test_batch4_integration.py  test_batch5_error_recovery.py  test_batch6_performance.py  test_document_search_flow.py  test_evaluation_integration.py  test_langgraph_graph.py  test_langgraph_integration.py  test_langgraph_nodes.py  test_langgraph_service.py  test_langgraph_state.py
(+57 files in other folders)
